DeathData inserted into database

--- a/CovidDataPortal/CovidDataPortalApi/appsettings.json
+++ b/CovidDataPortal/CovidDataPortalApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConString": "Data Source=DESKTOP-91718P6\\SQLEXPRESS;Initial Catalog=CovidDataPortal_db;Integrated Security=True"
+  }
 }
