log-in , signup and token generation done

--- a/CovidDataPortal/CovidDataPortalApi/appsettings.json
+++ b/CovidDataPortal/CovidDataPortalApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConString": "Data Source=DESKTOP-91718P6\\SQLEXPRESS;Initial Catalog=CovidDataPortal_db;Integrated Security=True"
+  },
+  "Jwt": {
+    "Key": "TestingjwtauthenticaTiOn12321Fir",
+    "Issuer": "https://localhost:7297/",
+    "Audience": "https://localhost:7297/"
   }
 }
